2001-12-11  Mark Mitchell  <mark@codesourcery.com>

	* qm/web.py (make_button_for_popup): Spell "resizeable" without
	the "e" in JavaScript code.
	(format_user_id): Likewise.
	* share/dtml/help.dtml (popup_manual): Likewise.
	* share/web/common.js (show_help): Likewise.
	(popup_manual): Likewise.
	
	* share/dtml/test/result.dtml: Sort the annotations.

	* Makefile.in (doc-install): Do not assume $(INSTALL) understands
	wildcards.
	* scripts/qm-release (build_qm): Do not rely on tar to do 
	uncompression.
	(build_exec): Do not try to update batch files here.  Adjust
	use of zip command.

	* Makefile.in (SCRIPTS): Use backslashes on Windows.

	* Makefile.in (install): Don't depend on install -D.
	(share-install): Likewise.

	* configure.in (AC_PROG_INSTALL): Remove.
	* configure: Regenerated.
	* standard.mk.in (INSTALL): Define explicitly.
	(INSTALL_DATA): Likewise.
	(INSTALL_PROGRAM): Likewise.
	(INSTALL_SCRIPT): Likewise.

	* Makefile.in (SCRIPTS): Hardwire destination path.

	* Makefile.in (PYTHON_PACKAGES_INSTALL): Do not attempt
	to set permissions on installed files.

	* Makefile.in (RELINCDIR): New variable.
	(PYTHON_PACKAGES_INSTALL): Use it.
	* standard.mk.in (INSTALLINCDIR): New variable.
	(NATPREFIX): Likewise.

	* Makefile.in (PYTHON_PACKAGES_INSTALL): Use relative paths.
	* README: Document Distutils version required.

	* Makefile.in (SCRIPTS): Fix typo.
	* qm.spec (Release): Increment.

	* Makefile.in (SCRIPTS): Generate files with DOS line-ending
	convention under Windows.
	* doc/manual/introduction.xml: Expand.
	* doc/manual/test-tour.xml: Explain that Cygwin will not work with
	QMTest.

2001-12-10  Mark Mitchell  <mark@codesourcery.com>

	* qm/attachment.py (TemporaryAttachmentStore.HandleUploadRequest):
	Add type attribute to <script>.
	* qm/web.py (DtmlPage.common_javascript): New variable.
	(DtmlPage.GenerateXMLHeader): New method.
	(DtmlPage.GenerateEndBody): Generate correctl XHTML.
	(DtmlPage.GenerateStartScript): New method.